public/css/styles.css
@import url("./fonts/icons.css");

* { font-family: 'Fjalla One', sans-serif; }
.btn-custom {
	background-color: #487fff;
	color: #ecf3f6;
	font-family: 'Quicksand', sans-serif;
	letter-spacing: 1.5px;
}
.btn-custom:hover {
	background-color: #4072e5;
}
.btn-custom:visited {
	color: red;
}
.page-title { color: #313638; }

/*	CAROUSEL + INTRO SECTION  */

.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.intro {
  padding: 1rem 2rem;
  opacity: 0.9;
  background-color: #f2f3fa;
  width: 80%;
}
.carousel{
	max-width: 400px !important;
}
.homepage-carousel .carousel-item {
	width: 400px;
}

@media (min-width: 576px) { 
	.intro-jumbo {
		padding-top: 6em;
		padding-bottom: 6em;
	}
	.carousel{
		max-width: 100% !important;
		/*left: 15%;*/
	}
}

/*	HOW-TO SECTION  */

.workflow-section .card { border-radius: 0px !important; }

.workflow-section .card-title { 
	background-color: #487fff;
	color: #ecf3f6;
	height: 4em;
	padding: 10px 0px;
	margin-bottom: 0px !important;
}
.workflow-section .card-body {
	background-size: cover;
	color: #ecf3f6;
	height: 250px;
}
.workflow-section .first-card.card-body {
	background-image: url('../images/img1.jpg');
}
.workflow-section .second-card.card-body {
	background-image: url('../images/img2.jpg');
}
.workflow-section .third-card.card-body {
	background-image: url('../images/img3.jpg');
}

/* Set width to make card deck cards 100% width */
@media (max-width: 800px) { 
	.workflow-section .card-deck {
		display: block;
		width: 100%;
		margin-bottom: .75rem;
	}
	.workflow-section .card-deck .card {
		display: block;
		margin-bottom: .75rem;
		vertical-align: top;
	}
}


/*	REVIEWS SECTION  */

.reviews.jumbotron-fluid {
	background-color: #f2f3fa;
	padding: 2em 1em;
}
.reviews .card-text { font-family: 'Quicksand', sans-serif; }
.reviews .card-body { background-color: #f2f3fa; }
.reviews .card { border: none; }

/* PRODUCTS  */

.product-info * {
	letter-spacing: 1px;
	max-width: 300px;
}
.product-links .add-to-cart i {
	background-color: #f2f3fa;
	color: #487fff;
	border-radius: 25px;
	padding: 7px;
	position: absolute;
	top: 5px;
	left: 8.5em;
}
.products .card {
	border: none;
	max-width: 302px;
	min-width: 300px;
}
.product-links .add-to-cart i:hover {
	background-color: #487fff;
	color: #f2f3fa;
	cursor: pointer;
}
.product-info ul {
	padding-left: 0px;
	background-color: #487fff;
	color: #f2f3fa;
	max-width: 300px;
	padding: 1em;
}
.product-info ul li {
	list-style-type: none;
}
.products .pagination {
	background-color: #f2f3fa;
	padding: 1em 0em;
	font-size: 1.3em;
	letter-spacing: 1.3px;
	color: #487fff;
}
.list-inline {
	display: flex;
	justify-content: center;
}
.products .card-columns {
	-webkit-column-count: 1;
	-moz-column-count: 1;
	column-count: 1;
}

@media (min-width: 770px) {
	.products .card-columns {
		-webkit-column-count: 2;
		-moz-column-count: 2;
		column-count: 2;
	}
}

@media (min-width: 950px) {
	.products .card-columns {
		-webkit-column-count: 3;
		-moz-column-count: 3;
		column-count: 3;
	}
}

@media(min-width: 576px){
	.products .card-columns .card {
		display: inline-block;
		width: auto !important;
	}
}

/*  SIDENAV  */

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 3;
    top: 0;
    left: 0;
    background-color: #487fff;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #ecf3f6;
    display: block;
    transition: 0.3s;
}

.sidenav a:hover {
    color: #f1f1f1;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

/*	CART  */

.cart-page .jumbotron {
	background-color: #f2f3fa;
}
.cart-page .remove-item { 
	color:  red;
	border-radius: 30px;
	padding: 6px;
	cursor: pointer;
}
.cart-page .item-column:nth-child(odd){
	background-color: #f2f3fa;
}
 .empty-cart {
	font-family: 'Quicksand', sans-serif;
	letter-spacing: 1.5px;
}
.cart-page .item-column p {
	font-family: 'Quicksand', sans-serif;
}

/*	CHECKOUT  */

.checkout-page form { padding: 4rem 2rem; }
.checkout-page legend { color: #b6babb; }
.checkout-page input {
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom-color: #487fff;
	min-width: 100%;
}
.checkout-page label {
	font-family: 'Quicksand', sans-serif;
	text-transform: capitalize;
}
.checkout-page label.error {
	color: orangered;
	font-size: 12px;
	width: 100%;
}
.checkout-page .modal-content {
	background-color:  #487fff;
	color: #ecf3f6;
}
.checkout-page .modal-header {
	border-bottom: none;
}
.checkout-page span i { color: #ecf3f6; }

@media(min-width: 1000px){
	.checkout-page input {
		min-width: 70%;
	}
}

/*	OVERRIDING STYLES FOR SMARTYSTREETS PLUGIN  */

.smarty-popup {
	font-family: 'Quicksand', sans-serif !important;
}
.smarty-choice-alt .smarty-choice-abort, .smarty-choice-override {
	background-color: #487fff !important;
}
.smarty-popup-invalid-header { 
	color: orangered !important;
	font-family: 'Quicksand', sans-serif !important;
}
.smarty-popup-missing-input-header { 
	color: #313638 !important;
	font-family: 'Quicksand', sans-serif !important;
}

/*  FOOTER  */

.page-footer { 	background-color: #313638; }
.page-footer *{
	color: #ecf3f6;
	font-family: 'Quicksand', sans-serif;
}



.overlay {
  display: block;
  width: 100%;
  height: auto;
  transition: .5s ease;
  z-index: 1;
  position: relative;
}

.photographer-account a{
  position: absolute;
  color: hsla(0,0%,100%,.8);
  width: 100%;
  z-index: 3;
  right: 0;
  bottom: 0;
}

